<resources>
    <string name="app_name">OpenEvents</string>
    <string name="Your_email">Your Email</string>
    <string name="open_events_2_0">Open Events 2.0</string>
    <string name="your_password">Your Password</string>
    <string name="email">Email</string>
    <string name="sign_in">SIGN IN</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="your_first_name">Your first name</string>
    <string name="your_last_name">Your last name</string>
    <string name="img_jpg">img .jpg</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="Profile">Profile</string>
    <string name="Home">Home</string>
    <string name="Users">Users</string>
    <string name="create_Event">Create Event</string>
    <string name="create_event_name">Name</string>
    <string name="Location">Location</string>
    <string name="create_Event_Description">Description</string>
    <string name="createEvent_startDate">Start Date</string>
    <string name="createEvent_startTime">Start Time</string>
    <string name="createEvent_endDate">End Date</string>
    <string name="createEvent_endTime">End Time</string>
    <string name="createEvent_category">Category</string>
    <string name="createEvent_capacity">Capacity</string>
    <string name="createEvent_create_btn">Create</string>
    <string name="createEvent_name_error">Missing name field</string>
    <string name="createEvent_location_error">Missing location field</string>
    <string name="createEvent_description_error">Missing description field</string>
    <string name="createEvent_capacity_error">Missing capacity field</string>
    <string name="createEvent_capacity_error_syntax">Field must be a number</string>
    <string name="createEvent_categroy_error">Missing category field</string>
    <string name="createEvent_startDate_error">Missing StartDate field</string>
    <string name="createEvent_endDate_error">Missing EndDate field</string>
    <string name="createEvent_startTime_error">Missing StartTime field</string>
    <string name="createEvent_endTime_error">Missing EndTime field</string>
    <string name="createEvent_correct">Event created Done</string>
    <string name="category_others">Others</string>
    <string name="category_science">Science</string>
    <string name="category_games">Games</string>
    <string name="category_cultural">Cultural</string>
    <string name="category_art">Art</string>
    <string name="category_education">Education</string>
    <string name="category_politics">Politics</string>
    <string name="category_technology">Technology</string>
    <string name="category_music">Music</string>
    <string name="category_sport">Sport</string>
    <string name="AverageScore">Average Score</string>
    <string name="NumComments">Num. Comments</string>
    <string name="PercentageComments">Percentage Comments</string>
    <string name="SaveChanges">Save Changes</string>
    <string name="NombreUsuario">Nombre Usuario</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="button_delete_event">Delete Event</string>
    <string name="LastNameError">The Last Name is wrong!</string>
    <string name="EmailErrorEmpty">The email is empty!</string>
    <string name="EmailErrorSyntax">The email is wrong!</string>
    <string name="NameError">The name is wrong!</string>
    <string name="PasswordError">The password is wrong!</string>
    <string name="BodyError">Body Error!</string>
    <string name="IncorrectInsert">Incorrect insert data!</string>
    <string name="CreateEvent">Create Event</string>
</resources>