<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="700dp"
    tools:context=".presentation.CreateEventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:padding="12dp">

            <TextView
                android:id="@+id/registerTitle"
                style="@style/Style.Eventme.Text.Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_Event"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="15dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/createEvent_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/create_event_name"
                tools:layout_editor_absoluteX="12dp"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Style.Eventme.TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/createEvent_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/Location"
                app:layout_constraintTop_toBottomOf="@+id/createEvent_name"
                tools:layout_editor_absoluteX="50dp">


                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Style.Eventme.TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/createEvent_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/create_Event_Description"
                app:layout_constraintTop_toBottomOf="@+id/createEvent_location"
                tools:layout_editor_absoluteX="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Style.Eventme.TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:lines="3" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/startLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/createEvent_description"
                tools:layout_editor_absoluteX="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createEvent_startDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:hint="@string/createEvent_startDate"
                    app:layout_constraintTop_toBottomOf="@+id/createEvent_description"
                    tools:layout_editor_absoluteX="50dp">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Style.Eventme.TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createEvent_startTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:hint="@string/createEvent_startTime"
                    app:layout_constraintHorizontal_weight="0.5"
                    app:layout_constraintTop_toBottomOf="@+id/createEvent_startDate"
                    tools:layout_editor_absoluteX="50dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/createEvent_startTime_EditText"
                        style="@style/Style.Eventme.TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/endLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/startLayout"
                tools:layout_editor_absoluteX="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createEvent_endDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:hint="@string/createEvent_endDate"
                    app:layout_constraintTop_toBottomOf="@+id/startLayout"
                    tools:layout_editor_absoluteX="50dp">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Style.Eventme.TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createEvent_endTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:hint="@string/createEvent_endTime"
                    app:layout_constraintHorizontal_weight="0.5"
                    app:layout_constraintTop_toBottomOf="@+id/startLayout"
                    tools:layout_editor_absoluteX="50dp">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Style.Eventme.TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/latestLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/endLayout"
                tools:layout_editor_absoluteX="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createEvent_category"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:hint="@string/createEvent_category"
                    app:layout_constraintTop_toBottomOf="@+id/endLayout"
                    tools:layout_editor_absoluteX="50dp">

                    <AutoCompleteTextView
                        android:id="@+id/dropdown_menu_Category"
                        style="@style/Style.Eventme.TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createEvent_capacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:hint="@string/createEvent_capacity"
                    app:layout_constraintHorizontal_weight="0.5"
                    app:layout_constraintTop_toBottomOf="@+id/endLayout"
                    tools:layout_editor_absoluteX="50dp">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Style.Eventme.TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_btn"
                style="@style/Style.Eventme.Button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:text="@string/createEvent_create_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/latestLayout">

            </com.google.android.material.button.MaterialButton>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

      <!--  <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/navigation_space" />-->
    </LinearLayout>

</FrameLayout>